--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -62,14 +62,14 @@
         android:orientation="vertical"
         android:padding="5dp" >
 
-        <Button
+      <!--  <Button
             android:id="@+id/btnGalleryPick"
             style="@style/btn"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_sel"
             android:text="@string/btn_pick" />
-
+-->
         <Button
             android:id="@+id/btnGalleryPickMul"
             style="@style/btn"
